--- a/lesson4.html
+++ b/lesson4.html
@@ -79,8 +79,12 @@
                 color: red;
             }
 
+        
+
 
         </style>
+
+        <title>html text </title>
 
     </head>
 
