--- a/lesson10.html
+++ b/lesson10.html
@@ -58,7 +58,12 @@
 
  
 
-  <body>
+  <body style="padding-top: 60px; padding-left:55px;">
+
+
+    <div style="background-color: blueviolet; height: 500px; width: 400px;"  > body one</div>
+
+    <div style="background-color: burlywood; height: 500px; width: 400px;">body  one </div>
 
  
 
